@@ -61,7 +61,7 @@ $allowChange["send_email"] = false;
 $allowChange["member_file"] = false;
 
 $errorCount=0;
-if (isset($createUser) && $createUser =='yes') {
+if (empty($action) && $action =='create') {
 	// Security check.
 	$uname = removeTags($uname);
 
@@ -128,15 +128,15 @@ if (isset($createUser) && $createUser =='yes') {
 echo makeFormIntro('register.php', array(
 			'name' => 'usercreate_form',
 			'method' => 'POST',
-			'onsubmit' => "usercreate_form.create.disabled = true; usercreate_form.createUser.value ='yes'"));
+			'onsubmit' => "usercreate_form.create.disabled = true;"));
 include(dirname(__FILE__) . '/html/userData.inc');
 ?>
 <p>
 <?php echo _("Your account information will be sent to the email address you provide.") ?>
 <br><br>
-<input type="hidden" name="createUser" value ="no">
-<input type="submit" name="create" value="<?php echo _("Create") ?>">
-<input type="submit" name="cancel" value="<?php echo _("Cancel") ?>" onClick='parent.close()'>
+<input type="hidden" name="action" value ="">
+<input type="submit" name="create" value="<?php echo _("Create") ?>" onclick="usercreate_form.action.value ='create'">
+<input type="submit" name="cancel" value="<?php echo _("Cancel") ?>" onclick='parent.close()'>
 </form>
 <script language="javascript1.2" type="text/JavaScript">
 <!--
