@@ -1,3 +1,9 @@
+2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b6
+
+        * Change: Better handling of the onsubmit/double-clicking issue
+          utilizing an 'action' input which is changed depending on
+          which button was clicked.
+
 2004-07-21  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b5
 
 	* Fix: Cancel did not work in create user.
